Fix completion date clear styling to make the input not be too short.
[INT-6614]

--- a/src/domain/Inputs/SingleDateInput/style.scss
+++ b/src/domain/Inputs/SingleDateInput/style.scss
@@ -53,13 +53,16 @@
     }
   }
 
+  .SingleDatePickerInput__showClearDate {
+    padding-right: 0;
+  }
+
   .SingleDatePickerInput_clearDate {
     color: $n700;
     font-size: $fz-heading;
     line-height: $lh-heading;
     outline: none;
     position: absolute;
-    right: 30px;
     top: 19.5px;
     transition: color .3s ease-in-out;
 
